- Fix broken backward compatibility in handling of backslash
  followed by double-quote in string literals
- Fix bug: crash when plotting matrix data with the multiple
  bands option
- Fix bug: restore support for reading JMulTi .dat files
- GUI: apply some legibility fixes for dark GTK themes
- GUI: enable the advertised keystrokes in file "browser"
  windows (bug #294)

2023-12-05 version 2023c
- New commands "gridplot" and "gpbuild" for constructing
  composite plots
- "gnuplot" command: implement new option syntax to support
  multiple "bands" in a single plot (but continue to support
  the old band syntax until further notice)
- "panel" command: support the --cluster option to produce
  a greater variety of robust standard errors, including two-
  way clustering; add an option to use the Driscoll-Kraay
  covariance estimator; and support the --no-df-corr option
- "tsls" command: if the --robust option is given, compute a
  robust variant of the Hausman test
- "scatters" command: expose its time-series functionality
  under the name command-name "tsplots"
- String-valued series: support returning such series from a
  user function, and loosen the restrictions on assignment to
  such series
- New usage of the '*' operator to augment a string via
  repetition, for example: string s = "abc" * 3
- New function asort() for sorting arrays of all types
- New function corresp() to determine the correspondence (if
  any) between two series or vectors
- New function rgbmix() to do mixing of colors via their R, G
  and B channels
- String functions strsub(), regsub(), substr(), tolower() and
  toupper(): generalize to support strings arrays and string-
  valued series as arguments, as well as individual strings
- New function strvsort(): recodes a string-valued series such
  that the numeric codes correspond to the alphabetical order
  of the string values, or in line with a reordering specified
  by the user
- Add documentation for the functions dec2bin() and bin2dec(),